--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
 	"license": "MIT",
 	"require": {
 		"php": "^7.3||^8.0",
-		"codeigniter4/framework": "^4"
-	},
+		"codeigniter4/framework": "^4",
+      "ext-json": "*"
+    },
 	"require-dev": {
 		"fakerphp/faker": "^1.9",
 		"mikey179/vfsstream": "^1.6",
